# Advanced-Design-Program

./: Actions.cpp  Actions.h  Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Element.cpp  Element.h  GUI.cpp  GUI.h  README.md  common.h  main  main.cpp
Colors/: Colors.cpp  Colors.h
Figures/: Circle.cpp  Circle.h  Figure.cpp  Figure.h  Line.cpp  Line.h  Page.cpp  Page.h  PlaceHolder.cpp  PlaceHolder.h  Rectangle.cpp  Rectangle.h  Text.cpp  Text.h  common.h
